@@ -4,6 +4,11 @@ TODO:
  * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
+2012-06-18 MickeM
+ * Fixed issue with parsing in test mode
+ * Fixed Graphite client using wrong time for datestamp
+ * Added so debug NSCA logs host name
+
 2012-06-12 MickeM
  * Improved error handling in performance counters #436
  * Improved parsing of "legacy command lines"
